--- a/Converse.html
+++ b/Converse.html
@@ -13,7 +13,7 @@
 		
 			</font></strong></center>	
 	</nav>
-<h1><center><img src="logo.jpeg" width="400" height="400" </h1>
+<h1><center><img src="logo2.jpeg" width="400" height="400" </h1>
 <h1><center>Converse</center></h1>
 <body>
 <body style="background-image:url('Big.jpeg')">
